# CiFRUS

./: LICENSE  README.md  cifrus.py  cross_validate.py  demo.py  plots.py  pyproject.toml
.github/workflows/: release.yml
cifrus/: __init__.py  cifrus.py
data/: dataset_names.txt
data/1/: data.mat
data/10/: data.mat
data/11/: data.mat
data/12/: data.mat
data/13/: data.mat
data/14/: data.mat
data/15/: data.mat
data/16/: data.mat
data/17/: data.mat
data/18/: data.mat
data/19/: data.mat
data/2/: data.mat
data/20/: data.mat
data/21/: data.mat
data/22/: data.mat
data/23/: data.mat
data/24/: data.mat
data/25/: data.mat
data/26/: data.mat
data/27/: data.mat
data/28/: data.mat
data/29/: data.mat
data/3/: data.mat
data/30/: data.mat
data/31/: data.mat
data/32/: data.mat
data/33/: data.mat
data/34/: data.mat
data/35/: data.mat
data/36/: data.mat
data/37/: data.mat
data/38/: data.mat
data/39/: data.mat
data/4/: data.mat
data/40/: data.mat
data/41/: data.mat
data/42/: data.mat
data/43/: data.mat
data/44/: data.mat
data/45/: data.mat
data/46/: data.mat
data/47/: data.mat
data/48/: data.mat
data/49/: data.mat
data/5/: data.mat
data/50/: data.mat
data/51/: data.mat
data/52/: data.mat
data/53/: data.mat
data/54/: data.mat
data/55/: data.mat
data/56/: data.mat
data/57/: data.mat
data/58/: data.mat
data/59/: data.mat
data/6/: data.mat
data/60/: data.mat
data/62/: data.mat
data/7/: data.mat
data/8/: data.mat
data/9/: data.mat
results/performance/: acute-nephritis.csv  (+61 more)
(+2 files in other folders)
